--- a/restaurant/style.css
+++ b/restaurant/style.css
@@ -25,14 +25,13 @@
       url("fonts/OpenSans-Bold.ttf") format("truetype");
   }
   @font-face {
-    font-family: "Dancing Script";
+    font-family: 'Dancing Script';
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local("Dancing Script Bold"), local("DancingScript-Bold"),
-      url("fonts/DancingScript-Bold.ttf") format("truetype");
+    src: local('Dancing Script'), local('Dancing Script'), url('fonts/DancingScript-Bold.ttf') format('truetype');
   }
-
+  
 :root {
     --primary-color: green;
     --secondary-color: orange;
