--- a/style.css
+++ b/style.css
@@ -180,25 +180,35 @@ ul {
 }
 li {
   line-height: 3;
-  font-size: 1.5rem;
+  font-size: 1.35rem;
   padding-left: 20px;
 }
+li a {
+  padding: 10px 30px;
+  color: #eee;
+  background: #040403;
+  border-radius: 35px;
+}
 li a:hover {
-  color: var(--forth-color);
+  color: #111;
+  transition: ease 0.6s;
+  background: #81cec5;
+  padding: 10px 30px;
+  border-radius: 35px;
 }
 /* Modal Content (Image) */
 .modal-content {
   margin: auto;
   display: block;
   width: 80%;
-  max-width: 700px;
-  height: 80vh;
-  background: #000000dd;
+  /* max-width: 700px;
+  height: 80vh; */
+  background: radial-gradient(#111, #101010, #000, #000);
+  /* background: #000000dd; */
   z-index: 100;
-  border: 2px solid #000;
+  /* border: 2px solid #000; */
   border-radius: 15px;
   padding: 30px 10px;
-  /* box-shadow: 0 0 100px #111 inset; */
   display: flex;
   justify-content: center;
   align-items: center;
