--- a/running-shoe-shop/style.css
+++ b/running-shoe-shop/style.css
@@ -35,9 +35,9 @@ body {
 }
 .wrapper {
   width: 100%;
-  max-width: 1600px;
+  max-width: 1350px;
   margin: 0 auto;
-  padding: 2.5%;
+  padding: 0 2.5%;
 }
 .navbar {
   display: flex;
@@ -103,7 +103,7 @@ body {
 
 .wrapper-flex {
   width: 100%;
-  max-width: 1600px;
+  max-width: 1350px;
   margin: 0 auto;
   padding: 2.5%;
   /* Can use these FLEX Properties or INLINE-BLOCK on left & right DIVS */
@@ -204,14 +204,17 @@ body {
   filter: drop-shadow(0 30px 25px);
 }
 #product h1,
-#product h3, #shop h1, #shop h3 {
+#product h3,
+#shop h1,
+#shop h3 {
   text-shadow: 0 0 5px #000;
   color: #fff;
   font-weight: 400;
   margin-bottom: 3rem;
 }
 
-#product h1, #shop h1 {
+#product h1,
+#shop h1 {
   font-size: 4.5rem;
   text-transform: uppercase;
 }
@@ -260,10 +263,11 @@ Circle Shapes
 #shop {
   min-height: 100vh;
   background: #2d2d2d;
-  background: linear-gradient(#c21f1f,#1b1c1e);
+  background: linear-gradient(#c21f1f, #1b1c1e);
   padding: 4em 0;
 }
-#shop h1, #shop h3 {
+#shop h1,
+#shop h3 {
   text-align: center;
   margin-bottom: 1rem;
 }
@@ -581,9 +585,9 @@ Circle Shapes
 @media (max-width: 1367px) {
   .wrapper-flex,
   .wrapper {
-    padding: 0;
+    /* padding: 0; */
     margin: 0 auto;
-  }  
+  }
   .shop-grid .grid-item .grid-img img {
     transform: translateY(-60px) scale(1.15);
   }
@@ -591,7 +595,7 @@ Circle Shapes
     transform: scaleY(1);
   }
   .shop-grid .grid-item {
-    border:none;
+    border: none;
   }
 }
 @media (max-width: 1199px) {
@@ -600,6 +604,10 @@ Circle Shapes
   }
 }
 @media (max-width: 991px) {
+  .menu li {
+    font-size: 1rem;
+    padding: 1rem;
+  }
   #intro h1,
   #product h1,
   #contact h1 {
@@ -635,11 +643,13 @@ Circle Shapes
   #intro {
     padding-top: 10em !important;
   }
-  #product {
+  #product,
+  #shop {
     padding: 4em 0;
   }
   #intro h1,
   #product h1,
+  #shop h1,
   #contact h1 {
     font-size: 2.5rem;
   }
@@ -684,10 +694,10 @@ Circle Shapes
     padding: 0;
   }
   .btn {
-    padding: .5rem 2rem;
+    padding: 0.5rem 2rem;
     margin: 3rem 0.8rem 0 0.4rem;
     width: auto;
-}
+  }
   .shop-grid .grid-item .details .content .btn-shop {
     margin: 0.8rem 0;
   }
