--- a/Music/style.css
+++ b/Music/style.css
@@ -224,7 +224,7 @@ a.nav-link:hover {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: #946d4633;
+  /* background: #946d4633; */
 }
 .container-img img {
   position: absolute;
