--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ li {
   font-size: 1.35rem;
   padding-left: 20px;
   margin-bottom: 1.5rem;
-  margin-left: 1rem;
+  margin-left: 15%;
 }
 li a {
   padding: 0;
@@ -236,9 +236,9 @@ li a:hover {
   /* border: 2px solid #000; */
   border-radius: 15px;
   padding: 30px 10px;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   text-align: left;
 }
 
@@ -327,7 +327,14 @@ li a:hover {
     border-radius: 0;
     border: none;
   }
-  
+  .close {
+    top: 5px;
+    right: 15px;
+  } 
+  .close p {
+    font-size: .8rem;
+    padding: 8px 15px;
+  } 
 }
 @media only screen and (max-width: 575px) {
   li {
