--- a/robotics/style.css
+++ b/robotics/style.css
@@ -35,7 +35,7 @@ p {
 
 img {
   width: 100%;
-  height: 100%;
+  min-width: 100%;
 }
 
 /* HEADER */
@@ -165,7 +165,7 @@ li.nav-item:hover {
   content: "";
   position: absolute;
   top: -2rem;
-  left: 2rem;
+  left: 1.7rem;
   width: 30rem;
   height: 30rem;
   /* background: #ff4f79aa; */
@@ -275,6 +275,8 @@ section {
 .col-img img {
   width: auto;
   max-width: 100%;
+  min-width: auto;
+  height: 100%;
 }
 
 /* SECTION PROJECT */
@@ -318,7 +320,7 @@ section {
 } */
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 767px) {
   ul.nav-list {
     /* display: none; */
     flex-direction: column;
