--- a/rosa/style-2.css
+++ b/rosa/style-2.css
@@ -39,7 +39,8 @@ p {
 
 img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  min-width: 100%;
 }
 
 .container {
@@ -55,10 +56,10 @@ img {
 
 /* Header */
 header {
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   background: linear-gradient(to bottom, rgb(0, 0, 0, 0.5), transparent);
 }
 
