--- a/robotics/style-remote-fonts.css
+++ b/robotics/style-remote-fonts.css
@@ -1,36 +1,5 @@
 /* FONTS Declaration */
-/* @import url("https://fonts.googleapis.com/css2?family=MuseoModerno&family=Russo+One&family=Orbitron&display=swap"); */
-
-/* Fonts */
-@font-face {
-  font-family: 'Orbitron';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(fonts/Orbitron.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* latin */
-@font-face {
-  font-family: 'Russo One';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Russo One'), local('RussoOne-Regular'), url(fonts/Russo-One.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(fonts/Open-Sans.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=MuseoModerno&family=Russo+One&display=swap");
 
 /* GLOBAL Styles */
 
@@ -69,24 +38,15 @@ img {
   min-width: 100%;
 }
 
-.offset::before {
-  content: "";
-  height: 63px;
-  margin-top: -63px;
-  display: block;
-}
-
 /* HEADER */
 
 header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   padding: 0.8rem 0;
-  /* background: #5959697d; */
-  background: #434175;
-  z-index: 1600;
+  background: #2221467d;
 }
 
 .container {
@@ -115,7 +75,7 @@ nav {
 .logo i {
   font-size: 2.5rem;
   background: #ff4f797d;
-  padding: 1rem 0.9rem 1.2rem;
+  padding: 1rem;
   border-radius: 50%;
   color: #fff;
 }
@@ -126,22 +86,18 @@ ul.nav-list {
 }
 
 li.nav-item {
-  padding: 0 1.6rem;
-  /* line-height: 2.5; */
+  padding: 0 2.2rem;
+  line-height: 2.5;
 }
 li.nav-item:last-child {
   padding-right: 0;
 }
 
 .nav-link {
-  /* font-family: "Russo One", sans-serif; */
-  /* font-family: "Open Sans", sans-serif; */
-  font-family: "Orbitron", sans-serif;
   color: #fff;
   text-transform: uppercase;
-  /* font-weight: 700; */
-  font-size: 1.4rem;
-  letter-spacing: 1px;
+  font-weight: 700;
+  font-size: 1.5rem;
   /* padding-bottom: 1.6rem; */
   transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   /* display: block; */
@@ -182,8 +138,7 @@ li.nav-item:hover {
 .img-container {
   /* background: url(images/closeup-photo-of-purple-gemstones-1121123.jpg) center
     center/cover; */
-  background: url(images/high-angle-photo-of-robot-2599244.jpg) center
-    center/cover;
+  background: url(images/high-angle-photo-of-robot-2599244.jpg) center center/cover;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -210,7 +165,7 @@ li.nav-item:hover {
   content: "";
   position: absolute;
   top: -2rem;
-  left: 2.6rem;
+  left: 1.7rem;
   width: 30rem;
   height: 30rem;
   /* background: #ff4f79aa; */
@@ -225,8 +180,7 @@ li.nav-item:hover {
 }
 
 .sup-headline {
-  /* font-family: "Russo One", sans-serif; */
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Russo One", cursive;
   text-transform: capitalize;
   line-height: 1;
   font-size: 4rem;
@@ -235,6 +189,7 @@ li.nav-item:hover {
   font-size: 5rem;
   position: relative;
   top: 0.5rem;
+  font-family: "Russo One", sans-serif;
 }
 .headline {
   font-family: "Russo One", sans-serif;
@@ -245,23 +200,20 @@ li.nav-item:hover {
   line-height: 1;
 }
 .sub-headline {
-  /* font-family: "Russo One", sans-serif; */
-  font-family: "Orbitron", sans-serif;
-  font-size: 2rem;
+  font-family: "Russo One", cursive;
+  font-size: 2.2rem;
   margin-bottom: 2rem;
-  letter-spacing: 2px;
 }
 .asterisk {
   margin: 0.7rem 0;
   color: #b83b66;
 }
 .btn {
-  font-family: "Orbitron", sans-serif;
   display: inline-block;
   transition: transform 0.25s;
   color: #fff;
   background: #ff4f79;
-  padding: 0.8rem 1.8rem 1rem;
+  padding: 0.8rem 1.8rem;
   border-radius: 0.6rem;
   text-transform: uppercase;
 }
@@ -274,8 +226,8 @@ li.nav-item:hover {
   background: #434175;
 }
 
-/* SECTION ROBOTS */
-.section {
+/* SECTION APPS */
+section {
   padding: 8rem 0;
 }
 .row {
@@ -328,10 +280,9 @@ li.nav-item:hover {
 }
 
 /* SECTION PROJECT */
-.projects {
-  background: #222146
-    url(images/time-displayed-on-top-of-a-building-1824273.jpg) no-repeat
-    center/cover;
+#projects {
+  background: #222146 url(images/time-displayed-on-top-of-a-building-1824273.jpg)
+    no-repeat center/cover;
 }
 .between {
   min-height: 65vh;
@@ -351,9 +302,9 @@ li.nav-item:hover {
 }
 
 /* SECTION EXPLORE */
-.explore {
-  background: #222146 url(images/book-coffee-computer-desk-430546.jpg) no-repeat
-    center/cover;
+#explore {
+  background: #222146 url(images/book-coffee-computer-desk-430546.jpg)
+    no-repeat center/cover;
 }
 
 /* SECTION RESEARCH */
@@ -369,7 +320,7 @@ li.nav-item:hover {
 } */
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 767px) {
   ul.nav-list {
     /* display: none; */
     flex-direction: column;
@@ -404,9 +355,6 @@ li.nav-item:hover {
   }
   .open .menu-toggle .fa-times {
     display: block;
-    position: fixed;
-    right: 2.7rem;
-    top: 2rem;
   }
 
   .row {
@@ -414,24 +362,5 @@ li.nav-item:hover {
   }
   .padding-right {
     padding-right: 0;
-  }
-  .section {
-    padding: 4rem 0;
-  }
-
-  #showcase .content::before {
-    left: -0.3rem;
-  }
-  .separator h2 {
-    font-size: 2rem;
-  }
-  .sup-headline {
-    font-size: 3rem;
-  }
-  .headline {
-    font-size: 3rem;
-  }
-  .sub-headline {
-    font-size: 1.6rem;
   }
 }
