--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   src: url(fonts/Oswald400.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-@font-face {
+/* @font-face {
   font-family: "Amatic SC";
   font-style: normal;
   font-weight: 400;
@@ -70,7 +70,7 @@
   font-display: swap;
   src: local("Oswald"), local("Oswald"),
     url("fonts/Oswald-Bold.ttf") format("truetype");
-}
+} */
 
 :root {
   --primary-color: #24261f;
