--- a/wedding/style.css
+++ b/wedding/style.css
@@ -1,6 +1,25 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;1,300&family=Dancing+Script:wght@400;600;700&display=swap"); */
 
+/* WOff2 Font Declarations */
 @font-face {
+  font-family: 'Dancing Script';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('fonts/Dancing-Script.woff2') format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'Cormorant Garamond';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Cormorant Garamond Regular'), local('CormorantGaramond-Regular'), url('fonts/Cormorant-Garamond.woff2') format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* TTF Font Declarations */
+/* @font-face {
   font-family: 'Dancing Script';
   font-style: normal;
   font-weight: 400;
@@ -42,7 +61,7 @@
   font-weight: 500;
   font-display: swap;
   src: local('Cormorant Garamond Medium'), local('CormorantGaramond-Medium'), url('fonts/CormorantGaramond-Medium.ttf') format('truetype');
-}
+} */
 
 :root {
   --primary-color: #ff8f00de;
