--- a/robotics/style.css
+++ b/robotics/style.css
@@ -3,34 +3,41 @@
 
 /* Fonts */
 @font-face {
-  font-family: 'Orbitron';
+  font-family: "Orbitron";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/Orbitron.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(fonts/Orbitron.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Russo One';
+  font-family: "Russo One";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Russo One'), local('RussoOne-Regular'), url(fonts/Russo-One.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local("Russo One"), local("RussoOne-Regular"),
+    url(fonts/Russo-One.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 /* latin */
 @font-face {
-  font-family: 'Open Sans';
+  font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(fonts/Open-Sans.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local("Open Sans Regular"), local("OpenSans-Regular"),
+    url(fonts/Open-Sans.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
-
 
 /* GLOBAL Styles */
 
@@ -226,7 +233,7 @@ li.nav-item:hover {
 
 .sup-headline {
   /* font-family: "Russo One", sans-serif; */
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   text-transform: capitalize;
   line-height: 1;
   font-size: 4rem;
@@ -272,6 +279,81 @@ li.nav-item:hover {
 .btn-showcase {
   /* background: #222146; */
   background: #434175;
+}
+
+.back-to-portfolio {
+  position: fixed;
+  left: 0;
+  background: #fff;
+  border-left: none;
+  border-bottom-right-radius: 0.6rem;
+  padding: 10px 28px 10px 10px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transform: translateX(-100%);
+  transition: transform 0.3s;
+  z-index: 2000;
+  font-family: "Orbitron", sans-serif;
+  font-size: 1.4rem;
+}
+.go-back .back-to-portfolio {
+  transform: translateX(0);
+}
+.back-to-portfolio h4 {
+  color: #ff4f79;
+  padding: 5px 2px 5px 0;
+}
+.back-to-portfolio h4 a {
+  color: #ff4f79;
+}
+.back-to-portfolio h4 a i {
+  position: relative;
+  top: 5px;
+}
+.back-to-portfolio h4 a:hover {
+  color: #434175;
+}
+.back-to-portfolio h4.right {
+  position: relative;
+  right: -41px;
+}
+/* .back-to-portfolio .fa-arrow-right {
+  right: 0;
+  position: relative;
+} */
+.back-to-portfolio .after {
+  font-family: "Russo One";
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #fff;
+  padding: 10px 15px 10px 15px;
+  font-size: 1.4rem;
+  position: absolute;
+  top: 0px;
+  right: -16.5%;
+  background: #ff4f79;
+  border-top-right-radius: 0.6rem;
+  border-bottom-right-radius: 0.6rem;
+  border-left-width: 1px;
+}
+
+.back-to-portfolio .after span {
+  display: block;
+  animation: 1.8s pulse infinite ease-in;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.85) translateX(15px);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.3) translateX(-7px);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3) translateX(-7px);
+  }
 }
 
 /* SECTION ROBOTS */
