--- a/rosa/style.css
+++ b/rosa/style.css
@@ -277,6 +277,80 @@ nav {
     background-color: var(--secondary-font-color);
 }
 
+/* BACK TO PORTFOLIO BUTTON */
+.back-to-portfolio {
+    position: fixed;
+    left: 0;
+    background: #fff;
+    border-left: none;
+    border: 2px solid #c59d5f;
+    border-bottom-right-radius: 0.6rem;
+    padding: 10px 40px 10px 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+    z-index: 2000;
+    font-size: 1.4rem;
+    box-shadow: 0 0 3px #000;
+  }
+  .go-back .back-to-portfolio {
+    transform: translateX(0);
+  }
+  .back-to-portfolio h4 {
+    /* color: #252525; */
+    padding: 5px 2px 5px 0;
+    line-height: 2;
+  }
+  .back-to-portfolio h4 a {
+    color: #c59d5f;
+    transition: .4s;
+  }
+  .back-to-portfolio h4 a i {
+    position: relative;
+    top: 5px;
+  }
+  .back-to-portfolio h4 a:hover {
+    color: #252525;
+  }
+  .back-to-portfolio h4.right {
+    position: relative;
+    right: -41px;
+  }
+  .back-to-portfolio .after {
+    color: #fff;
+    padding: 10px 15px 10px 15px;
+    font-size: 1.4rem;
+    position: absolute;
+    top: -2px;
+    right: -18.5%;
+    background: #c59d5f;
+    border-top-right-radius: 0.6rem;
+    border-bottom-right-radius: 0.6rem;
+    border-left-width: 1px;
+    box-shadow: 1px 0 3px #000;
+  }
+  
+  .back-to-portfolio .after span {
+    display: block;
+    animation: 1.8s pulse infinite ease-in;
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(0.85) translateX(15px);
+      opacity: 0;
+    }
+    60% {
+      transform: scale(1.3) translateX(-7px);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1.3) translateX(-7px);
+    }
+  }
+  
+
 /* Discover our story */
 .global-headline {
     text-align: center;
