--- a/jokes/style.css
+++ b/jokes/style.css
@@ -182,6 +182,96 @@ i {
   z-index: 9;
 }
 
+
+/* BACK TO PORTFOLIO BUTTON */
+.back-to-portfolio {
+  position: fixed;
+  left: 0;
+  top: 35%;
+  background: #fff;
+  border-left: none;
+  border-bottom-right-radius: 0.6rem;
+  padding: 10px 40px 10px 10px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transform: translateX(-100%);
+  transition: transform 0.3s;
+  z-index: 2000;
+  font-family: "Orbitron", sans-serif;
+  font-size: 1.4rem;
+  border: 3px solid #fff;
+  box-shadow: 1px 0 5px #000;
+  line-height: 2;
+}
+.go-back .back-to-portfolio {
+  transform: translateX(0);
+}
+.back-to-portfolio h4 {
+  color: #ff4f79;
+  padding: 5px 2px 5px 0;
+  font-size: 1rem;
+}
+.back-to-portfolio h4 a {
+  color: #ff4f79;
+}
+.back-to-portfolio h4 a i {
+  position: relative;
+  top: 5px;
+}
+.back-to-portfolio h4 a:hover {
+  color: #434175;
+}
+.back-to-portfolio h4.right {
+  position: relative;
+  right: -41px;
+}
+.back-to-portfolio .after {
+  font-family: "Russo One";
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #fff;
+  padding: 0px 15px 0px 15px;
+  font-size: 1.4rem;
+  position: absolute;
+  top: -3px;
+  right: -25%;
+  background: #434175;
+  border: 3px solid #fff;
+  box-shadow: 1px 0 5px #000;
+  border-top-right-radius: 0.6rem;
+  border-bottom-right-radius: 0.6rem;
+  border-left-width: 1px;
+}
+
+.back-to-portfolio .after span {
+  display: block;
+  animation: 1.8s pulse infinite ease-in;
+}
+
+.go-back .overlay {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #0f0f0fcf;
+  z-index: 1500;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.85) translateX(15px);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.3) translateX(-7px);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3) translateX(-7px);
+  }
+}
+
 /* --- Page 1 ---*/
 #page-1 {
   position: relative;
