--- a/rosa/style.css
+++ b/rosa/style.css
@@ -335,6 +335,17 @@ nav {
     display: block;
     animation: 1.8s pulse infinite ease-in;
   }
+
+  .go-back .overlay {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #0f0f0fcf;
+    z-index: 1500;
+  }
+  
   
   @keyframes pulse {
     0% {
