--- a/jokes/style.css
+++ b/jokes/style.css
@@ -126,6 +126,7 @@ section {
   justify-content: center;
   align-items: center;
   text-align: center;
+  overflow-x: hidden;
 }
 .content {
   max-width: 400px;
@@ -390,11 +391,11 @@ h2 {
   width: 100%;
   height: 100vh;
 }
-#page-6 h1,
+/* #page-6 h1,
 h2,
 h4 {
   font-family: "Oswald", sans-serif;
-}
+} */
 #page-6 h1,
 #page-7 h3 {
   color: var(--forth-color);
@@ -418,7 +419,7 @@ h4 {
     padding: 30px;
   }
   .content h4 {
-    font-size: 1.6rem;
+    font-size: 2rem;
     text-transform: uppercase;
   }
   .content h1 {
