--- a/jokes/style.css
+++ b/jokes/style.css
@@ -198,7 +198,6 @@ i {
   transform: translateX(-100%);
   transition: transform 0.3s;
   z-index: 2000;
-  font-family: "Orbitron", sans-serif;
   font-size: 1.4rem;
   border: 3px solid #fff;
   box-shadow: 1px 0 5px #000;
@@ -208,6 +207,7 @@ i {
   transform: translateX(0);
 }
 .back-to-portfolio h4 {
+  font-family: "Oswald", sans-serif !important;
   color: #ff4f79;
   padding: 5px 2px 5px 0;
   font-size: 1rem;
