--- a/wedding/style.css
+++ b/wedding/style.css
@@ -6,7 +6,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("fonts/Dancing-Script.woff2") format('woff2');
+  src: url('fonts/Dancing-Script.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -14,7 +14,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Cormorant Garamond Regular'), local('CormorantGaramond-Regular'), url("fonts/Cormorant-Garamond.woff2") format('woff2');
+  src: local('Cormorant Garamond Regular'), local('CormorantGaramond-Regular'), url('fonts/Cormorant-Garamond.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -197,6 +197,95 @@ p {
 .btn-primary:hover {
   transform: scale(1.05);
 }
+
+/* BACK TO PORTFOLIO BUTTON */
+.back-to-portfolio {
+  position: fixed;
+  left: 0;
+  top: 45%;
+  background: #fff;
+  border-left: none;
+  border-bottom-right-radius: 0.6rem;
+  padding: 0px 40px 5px 10px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transform: translateX(-100%);
+  transition: transform 0.3s;
+  z-index: 2000;
+  font-family: "Cormorant Gamorand", serif;
+  font-size: 0.9rem;
+  line-height: 2;
+  box-shadow: 0 0 5px #000;
+}
+.go-back .back-to-portfolio {
+  transform: translateX(0);
+}
+.back-to-portfolio h4 {
+  color: #ff4f79;
+  padding: 5px 2px 5px 0;
+  /* font-size: 1.1rem; */
+}
+.back-to-portfolio h4 a {
+  color: #8f1c3c;
+}
+.back-to-portfolio h4 a i {
+  position: relative;
+  top: 5px;
+}
+.back-to-portfolio h4 a:hover {
+  color: #bf2861;
+}
+.back-to-portfolio h4.right {
+  position: relative;
+  right: -41px;
+}
+.back-to-portfolio .after {
+  font-family: "Russo One";
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #fff;
+  padding: 5px 15px 5px 15px;
+  /* font-size: 1.4rem; */
+  position: absolute;
+  top: 0px;
+  right: -15.3%;
+  background: #8f1c3c;
+  border-top-right-radius: 0.6rem;
+  border-bottom-right-radius: 0.6rem;
+  border-left-width: 1px;
+  box-shadow: 2px 0 5px #000;
+}
+
+.back-to-portfolio .after span {
+  display: block;
+  animation: 1.8s pulse infinite ease-in;
+}
+
+.go-back .overlay {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #0f0f0fcf;
+  z-index: 1500;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.85) translateX(15px);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.3) translateX(-7px);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.3) translateX(-7px);
+  }
+}
+
+
 
 /*-------------------------------------
    IMAGE OVERFLOW & HOVER ANIMATIONS
