--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Oswald&display=swap');
+
 /* FONT FACE LOADER */
 @font-face {
   font-family: 'Amatic SC';
