--- a/wedding/style.css
+++ b/wedding/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;1,300&family=Dancing+Script:wght@400;600;700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;1,300&family=Dancing+Script:wght@400;600;700&display=swap");
 
 /* WOff2 Font Declarations */
 @font-face {
