--- a/photo-portfolio/style.css
+++ b/photo-portfolio/style.css
@@ -105,6 +105,78 @@ footer h3 {
     margin-bottom: 0;
 }
 
+/* BACK TO PORTFOLIO BUTTON */
+.back-to-portfolio {
+    position: fixed;
+    left: 0;
+    top: 45%;
+    background: #fff;
+    border-left: none;
+    border-bottom-right-radius: 0.6rem;
+    padding: 0px 40px 5px 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+    z-index: 2000;
+    font-size: 0.9rem;
+    line-height: 2;
+    box-shadow: 0 0 5px #000;
+  }
+  .go-back .back-to-portfolio {
+    transform: translateX(0);
+  }
+  .back-to-portfolio h4 {
+    color: #c22d2d;
+    margin: 5px;
+  }
+  .back-to-portfolio h4 a {
+    color: #c22d2d;
+  }
+  .back-to-portfolio h4 a i {
+    position: relative;
+    top: 5px;
+  }
+  .back-to-portfolio h4 a:hover {
+    color: #222;
+  }
+  .back-to-portfolio h4.right {
+    position: relative;
+    right: -41px;
+  }
+  .back-to-portfolio .after {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #fff;
+    padding: 5px 15px 5px 15px;
+    /* font-size: 1.4rem; */
+    position: absolute;
+    top: 0px;
+    right: -18.3%;
+    background: #c22d2d;
+    border-top-right-radius: 0.6rem;
+    border-bottom-right-radius: 0.6rem;
+    border-left-width: 1px;
+    box-shadow: 2px 0 5px #000;
+  }
+  
+  .back-to-portfolio .after span {
+    display: block;
+    animation: 1.8s pulse infinite ease-in;
+  }
+  
+  .go-back .overlay {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #0f0f0fcf;
+    z-index: 1500;
+  }
+  
+  
+
 /* Screen sizes 500px and up */
 @media(min-width: 500px) {
     #landing {
