--- a/web-design/css/pink.css
+++ b/web-design/css/pink.css
@@ -113,9 +113,7 @@ section.services .content p {
   background: #f5f5f5;
 }
 .recent-work h3.sec_header {
-  background: linear-gradient(#d4164d, #d4164d);
-  background-clip: text;
-  color: transparent;
+  color: #d4164d;
 }
 
 #demo-flat .flipster__button {
@@ -137,21 +135,6 @@ section.services .content p {
   color: #d5d5d5;
 }
 
-.recent-work h2 {
-  color: #e53866;
-}
-.recent-work p.sub-heading {
-  color: #513266;
-}
-.recent-work .columns .card {
-  margin-bottom: 100px;
-  padding: 0 20px 10px 20px;
-  background: #6f4885;
-  background: #593d6d;
-  background: #322244;
-  background: #503266;
-  background-image: linear-gradient(to top, #362548, #533368, #704986);
-}
 
 .recent-work .button {
   background-color: #e63f64;
