--- a/web-design/css/style.css
+++ b/web-design/css/style.css
@@ -163,7 +163,7 @@ header a {
   background: #f5f5f5;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
   z-index: 11500;
-  transition: 0.5s;
+  transition: right 0.5s ease;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -634,13 +634,12 @@ form textarea {
 }
 
 .btn-box .common-btn {
-  background: #2c6089;
   background: #5a5b6a;
   border: 2px solid #2c6089;
   border: none;
   color: #ffffff;
   cursor: pointer;
-  transition: 0.1s;
+  transition: background 0.1s ease;
 }
 
 .btn-box .common-btn:hover {
@@ -731,7 +730,7 @@ hr {
   background: #f5f5f5;
   padding: 10px;
   position: relative !important;
-  transition: 0.3s;
+  transition: background 0.3s ease;
 }
 
 /* Scroll to top Button */
